# django-base-site

./: .coveragerc  .dockerignore  .editorconfig  .env.toml  .eslintrc.js  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc.toml  .readthedocs.yaml  .stylelintignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.node  Gemfile  LICENSE.md  Makefile  Pipfile  Procfile  README.md  Vagrantfile  commit_message.txt  compose.yml  config.rb  diff.txt  docker-compose.yml  eslint.config.mjs  fabfile.py  gulpfile.js  gunicorn.conf.py  justfile  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  readme.md  readme.rst  requirements-dev.txt  (+10 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  upgrade_node_packages.yml  upgrade_packages.yml  upgrade_python_packages.yml
apps/accounts/: api.py  auth_adapter.py  forms.py  middleware.py  models.py  schemas.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_first_name_and_id.py  0003_alter_user_groups_alter_user_is_active.py  0004_add_timezone_to_user.py  0005_user_avatar_crop_data_user_avatar_original_and_more.py  0006_alter_user_timezone.py
apps/accounts/tests/: test_api.py  test_auth_flows.py  test_avatar_api.py  test_email_verification_flow.py  test_mfa_flows.py  test_views.py
apps/base/: api.py  context_processors.py  errors.py  forms.py  hijack_permissions.py  ninja_pagination.py  permissions.py  storage.py  tasks.py  views.py
apps/base/mixins/: __init__.py  _access.py  _models.py  _querysets.py  _views.py
apps/base/templates/: 404.html  500.html  503.html  index.html  login.html
apps/base/templatetags/: accounts.py  gravatar.py  site.py  spa.py  vite.py
apps/base/tests/: __init__.py  _base.py  test_spa_url.py  test_test_notifications_api.py  test_views.py  test_vite_templatetag.py  vite_manifest.json
apps/base/utils/: email.py  timezones.py
apps/billing/: access.py  admin.py  api.py  apps.py  constants.py  example_plans.py  features.py  models.py  plans.py  schemas.py  services.py  signals.py  tasks.py  webhooks.py
apps/billing/migrations/: 0001_initial.py  0002_webhookevent_failure_tracking.py
apps/billing/tests/: test_access.py  test_features.py  test_models.py  test_plans.py  test_services.py  test_tasks_and_signals.py  test_webhooks.py
apps/budget/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/budget/api/: payment_methods_urls.py  serializers.py  urls.py  views.py
apps/budget/migrations/: 0001_initial.py  0002_remove_budget_name_description.py  0003_remove_recurring_instance_lines.py  0004_add_category_budget.py  0005_add_payment_method.py
apps/budget/tests/: test_models.py
apps/notifications/: admin.py  api.py  apps.py  categories.py  constants.py  managers.py  models.py  schemas.py  services.py  signals.py  tasks.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_type_alter_notification_url.py
apps/notifications/tests/: test_api.py  test_preferences_api.py  test_services.py  test_signals.py
apps/organizations/: admin.py  api.py  apps.py  context_processors.py  forms.py  managers.py  middleware.py  models.py  schemas.py  session.py  signals.py  urls.py  views.py
apps/organizations/migrations/: 0001_initial.py  0002_organization_billing_email.py  0003_alter_organization_id_alter_organizationinvite_id_and_more.py  0004_add_is_primary_to_organizationmember.py
apps/organizations/templatetags/: organizations.py
apps/organizations/tests/: test_accept_invite_view.py  test_api.py  (+1 more)
apps/teams/: admin.py  api.py  apps.py  managers.py  models.py  schemas.py
config/: __init__.py  api.py  asgi.py  base.just  celery.py  coverage.ini  dev-requirements.txt  env_writer.py  fabfile.py  heroku_wsgi.py  mkdocs.yml  requirements.txt  settings.py  settings_local.py  urls.py  uwsgi.ini  wsgi.py
config/apache/: example.conf  example.wsgi
config/bash/: bashrc
config/cron/: example_taks
config/docker/: Dockerfile  Dockerfile.bun  Dockerfile.node  Dockerfile.web
config/git_hooks/: pre-commit
config/gunicorn/: example-site.py  example_com.py
config/nginx/: example.com.conf  example.conf
config/requirements/: base.txt  dev.in  dev.txt  dev_lock.txt  heroku.txt  prod.in  prod.txt  prod_lock.txt  production.txt
config/settings/: __init__.py  _base.py  base.py  dev.py  development.py  e2e.py  heroku.py  local.py  local.py.example  test_runner.py
config/upstart/: celeryd_example.com.conf  gunicorn_example.com.conf
config/urls/: base.py
config/vagrant/: base.sh
docs/: Makefile  billing.md  build-html  changelog.md  conf.py  debugging.md  docker.md  docker.rst  index.md  index.rst  mkdocs.yml  pre-commit-hook.rst  s3.md  s3.rst  setup-and-usage.rst  usage-and-setup.rst  vagrant.rst  website-launch-checklist.md  website-launch-checklist.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage-and-setup.html  website-launch-checklist.html
e2e/: conftest.py  test_auth.py  test_invite_flow.py
frontend/config/: vite.config.mjs
frontend/css/: app.css
frontend/js/: App.vue  app.js  router.js
public/media/: .keep
scripts/: create_env.sh  create_initial_env.py  parse_uv_diff.py  start_dev.sh  start_new_project
src/config/: eslint.config.js  vite.config.js  vite.config.mjs
src/js/: _color_mode_picker.js  base.js  main.js
src/scss/: _color_mode_picker.scss  _main_nav.scss  base.scss  main.scss
src/tsx/: main.tsx  types.ts
static/css/: base.css  base.min.css
static/img/: .gitignore
static/scss/: _variables.scss  base.scss
templates/: 404.html  500.html  index.html
templates/account/: base.html  email.html  name_change.html
templates/admin/: base.html
templates/base/: base-email.html  base.html  index.html  modal.html  one-col.html  two-col.html
templates/layouts/: base-email.txt  base.html
templates/snippets/: google-analytics.html
utils/: context_processors.py  create_local_settings_file.py  forms.py  views.py
(+198 files in other folders)
