[project]
name = "django-base-site"
description = "A Django project template for creating new Django projects."
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django~=5.0",
    "Pillow~=11.2",
    "boto3~=1.34",
    "celery~=5.5",
    "django-alive~=2.0",
    "django-allauth[mfa]~=65.16",
    "django-hijack~=3.7",
    "django-maintenance-mode~=0.19",
    "django-ninja~=1.4",
    "django-ses~=4.3",
    "django-storages~=1.8",
    "epicenv[django]~=1.2",
    "fido2~=1.1",
    "gunicorn~=25.0",
    "hiredis~=3.0",  # needed for Django's native cache and sessions
    "psycopg2-binary~=2.9",
    "python-json-logger~=4.1",
    "redis~=7.1",  # needed for celery
    "whitenoise~=6.7",
]

[dependency-groups]
dev = [
    "debugpy",
    "django-debug-toolbar",
    "django-stubs",
    "django-test-plus",
    # importlib-metadata is a dependency of djlint there is a PR to upgrade it in this issue (https://github.com/Riverside-Healthcare/djLint/pull/504) from 5.2.0 to 6.0.0
    "djlint",
    "ipdb",
    "mkdocs-include-markdown-plugin",
    "mkdocs-linkcheck",
    "mkdocs-material",
    "mkdocstrings[python]",
    "model-bakery",
    "pyotp",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-django~=4.5",
    "pytest-playwright",
    "ty",
    "readable-log-formatter",
    "ruff",
    "ruff-lsp",
]

[tool.ty]
# Ty type checker configuration: https://docs.astral.sh/ty/
# Ty is a fast, modern type checker for Python

[tool.ty.rules]
# These rules fire frequently on Django code because django-stubs cannot model
# dynamic attributes (reverse managers, custom queryset/manager methods, the
# swappable user model, ninja's Query/Path/Body sentinels, etc.). Until ty's
# Django integration matures, downgrade them so pre-commit type checking stays
# focused on application bugs rather than framework-level false positives.
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"

[tool.django-stubs]
django_settings_module = "config.settings.test_runner"

[tool.pytest.ini_options]
addopts = "--nomigrations --ds config.settings.test_runner --cov-config=config/coverage.ini --ignore=e2e"

# Python warnings documentation: https://docs.python.org/3/library/warnings.html
filterwarnings = [
    # Set the default behavior for warnings to error, so it forces you to look into fixing them
    "error",
]

[tool.bandit]
exclude_dirs = ["tests", "node_modules"]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    ".venv/*",
    "manage.py",
    "*migrations*",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.djlint]
indent = 2
profile="django"
max_line_length=120
blank_line_after_tag="endblock,extends,load"
format_css=true
format_js=true
use_gitignore=true
ignore="H030,H031,H017,H005,H021,H023"
exclude="base-email.html"

[tool.djlint.js]
indent_size=2

[tool.djlint.css]
indent_size=2

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
    "S",  # bandit
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D107", "D203", "D212", ]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]
"e2e/*" = ["S101"]

[tool.ruff.lint.flake8-bugbear]
# django-ninja uses these as default values in function signatures
extend-immutable-calls = ["ninja.Query", "ninja.File", "ninja.Form", "ninja.Body", "ninja.Path"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder", ]

# Epicenv schema for environment variables
# https://pypi.org/project/epicenv/
[tool.epicenv]
env_file = ".env"

[tool.epicenv.variables]
# Django Core Settings
DEBUG = { type = "bool", default = false, initial = "on", help_text = "Enable Django debug mode" }
SECRET_KEY = { type = "str", required = true, initial_func = "epicenv.initializers.url_safe_password", args = [50], help_text = "Django secret key for cryptographic signing" }
ALLOWED_HOSTS = { type = "list", default = [], initial = "localhost,127.0.0.1", help_text = "List of allowed host/domain names" }
INTERNAL_IPS = { type = "list", default = ["127.0.0.1"], initial = "127.0.0.1,0.0.0.0", help_text = "IPs that can see debug toolbar" }

# Database Settings
POSTGRES_USER = { type = "str", initial = "django_base_site", help_text = "PostgreSQL username" }
POSTGRES_DB = { type = "str", initial = "django_base_site", help_text = "PostgreSQL database name" }
POSTGRES_PASSWORD = { type = "str", initial_func = "epicenv.initializers.url_safe_password", args = [24], help_text = "PostgreSQL password" }
DATABASE_URL = { type = "url", initial = "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}", help_text = "Database connection URL" }
DB_SSL_REQUIRED = { type = "bool", default="false", help_text = "Require SSL for database connections" }

# Redis/Cache Settings
REDIS_URL = { type = "str", default = "redis://redis:6379/0", help_text = "Redis connection URL" }
REDIS_PREFIX = { type = "str", default = "", help_text = "Prefix for Redis keys" }

# Docker Compose Settings
COMPOSE_BAKE = { type = "str", initial = "true", help_text = "Enable Docker Compose bake" }
DOCKER_BUILDKIT = { type = "str", initial = "1", help_text = "Enable Docker BuildKit" }
COMPOSE_DOCKER_CLI_BUILD = { type = "str", initial = "1", help_text = "Use Docker CLI for builds" }

# Development/Debug Settings
USE_DOCKER = { type = "bool", default = false, help_text = "Running inside Docker container" }
IS_DEBUG_LOGGING_ON = { type = "bool", default = false, help_text = "Enable debug-level logging" }
VITE_DEV_MODE = { type = "bool", default="true", help_text = "Enable Vite development mode" }
READ_DOT_ENV_FILE = { type = "bool", default = true, help_text = "Read .env file on startup" }

# WSGI Settings
WSGI_APPLICATION = { type = "str", default = "config.wsgi.application", help_text = "WSGI application path" }

# Storage Settings
DEFAULT_FILE_STORAGE = { type = "str", default = "django.core.files.storage.FileSystemStorage", initial = "storages.backends.s3boto3.S3Boto3Storage", help_text = "Default file storage backend (defaults to S3/MinIO; switch back to FileSystemStorage to bypass S3)" }
STATICFILES_STORAGE = { type = "str", help_text = "Static files storage backend" }

# AWS Settings (optional, for S3 storage and Django SES email backend)
AWS_ACCESS_KEY_ID = { type = "str", help_text = "AWS access key ID" }
AWS_SECRET_ACCESS_KEY = { type = "str", help_text = "AWS secret access key" }
AWS_STORAGE_BUCKET_NAME = { type = "str", help_text = "S3 bucket name" }
AWS_S3_REGION = { type = "str", default = "us-east-2", help_text = "AWS S3 region" }

# Media S3 Storage (used by MinIO locally and by real S3 in prod via apps.base.storage.S3MediaStorage)
MEDIA_S3_ACCESS_KEY = { type = "str", default = "", initial = "minioadmin", help_text = "S3 access key for media storage (MinIO username locally)" }
MEDIA_S3_SECRET_KEY = { type = "str", default = "", initial = "minioadmin", help_text = "S3 secret key for media storage (MinIO password locally)" }
MEDIA_S3_ENDPOINT_URL = { type = "str", default = "", initial = "http://minio:9000", help_text = "Internal S3 endpoint URL (Docker-internal hostname for MinIO)" }
MEDIA_S3_URL_ENDPOINT_URL = { type = "str", default = "", initial = "http://localhost:9000", help_text = "Browser-facing S3 endpoint URL (used in generated URLs)" }
MEDIA_S3_BUCKET_NAME = { type = "str", default = "", initial = "media", help_text = "S3 bucket name for media uploads" }
MINIO_ROOT_USER = { type = "str", default = "minioadmin", help_text = "MinIO root username (local dev only)" }
MINIO_ROOT_PASSWORD = { type = "str", default = "minioadmin", help_text = "MinIO root password (local dev only)" }

# Host UID/GID for Docker bind-mount file ownership (defaults to 1000)
HOST_UID = { type = "str", initial = "1000", help_text = "Host user UID for Docker bind-mount file ownership" }
HOST_GID = { type = "str", initial = "1000", help_text = "Host user GID for Docker bind-mount file ownership" }

# Site / proxy
SITE_DOMAIN = { type = "str", default = "localhost:8000", help_text = "Public site domain (host:port). Use 'localhost' rather than '127.0.0.1' so WebAuthn / passkeys work in local dev (the spec rejects bare IPs as RP IDs)." }
SITE_SCHEME = { type = "str", default = "http", help_text = "Site scheme (http or https)" }
CSRF_TRUSTED_ORIGINS = { type = "list", default = [], help_text = "Comma-separated CSRF trusted origins (full scheme://host)" }

# Allauth
ACCOUNT_SIGNUP_OPEN = { type = "bool", default = false, help_text = "Allow new account signups" }

# Email Settings
DEFAULT_FROM_EMAIL = { type = "str", default = "", help_text = "Default email address for sending emails, required when using Django SES for sending emails on the production instance." }
EMAIL_URL = { type = "str", default="smtp://mailpit:1025", help_text = "Email server connection URL (Mailpit for local development)" }

# Instance Settings
INSTANCE = { type = "str", default = "dev", help_text = "Instance name (e.g., dev, staging, prod)" }

[tool.uv]
exclude-newer = "P7D"
