[project]
name = "django-base-site"
description = "A Django project template for creating new Django projects."
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "Django~=5.0",
    "Pillow~=12.2",
    "boto3~=1.34",
    "celery~=5.5",
    "django-alive~=2.0",
    "django-allauth[mfa]~=65.16",
    "django-hijack~=3.7",
    "django-maintenance-mode~=0.19",
    "django-ninja~=1.4",
    "django-ses~=4.3",
    "django-storages~=1.8",
    "epicenv[django]~=1.6",
    "fido2~=2.2",
    "gunicorn~=26.0",
    "hiredis~=3.0",  # needed for Django's native cache and sessions
    "psycopg2-binary~=2.9",
    "python-json-logger~=4.1",
    "redis~=7.1",  # needed for celery
    "stripe~=14.0",
    "whitenoise~=6.7",
]

[dependency-groups]
dev = [
    "debugpy",
    "django-debug-toolbar",
    "django-stubs",
    "django-test-plus",
    # importlib-metadata is a dependency of djlint there is a PR to upgrade it in this issue (https://github.com/Riverside-Healthcare/djLint/pull/504) from 5.2.0 to 6.0.0
    "djlint",
    "ipdb",
    "mkdocs-linkcheck",
    "mkdocs-material",
    "mkdocstrings[python]",
    "zensical",
    "model-bakery",
    "pyotp",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-django~=4.5",
    "pytest-playwright",
    "ty",
    "readable-log-formatter",
    "ruff",
    "ruff-lsp",
]

[tool.ty]
# Ty type checker configuration: https://docs.astral.sh/ty/
# Ty is a fast, modern type checker for Python

[tool.ty.rules]
# These rules fire frequently on Django code because django-stubs cannot model
# dynamic attributes (reverse managers, custom queryset/manager methods, the
# swappable user model, ninja's Query/Path/Body sentinels, etc.). Until ty's
# Django integration matures, downgrade them so pre-commit type checking stays
# focused on application bugs rather than framework-level false positives.
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"

[tool.django-stubs]
django_settings_module = "config.settings.test_runner"

[tool.pytest.ini_options]
addopts = "--nomigrations --ds config.settings.test_runner --cov-config=config/coverage.ini --ignore=e2e"

# Python warnings documentation: https://docs.python.org/3/library/warnings.html
filterwarnings = [
    # Set the default behavior for warnings to error, so it forces you to look into fixing them
    "error",
]

[tool.bandit]
exclude_dirs = ["tests", "node_modules"]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    ".venv/*",
    "manage.py",
    "*migrations*",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.djlint]
indent = 2
profile="django"
max_line_length=120
blank_line_after_tag="endblock,extends,load"
format_css=true
format_js=true
use_gitignore=true
ignore="H030,H031,H017,H005,H021,H023"
exclude="base-email.html"

[tool.djlint.js]
indent_size=2

[tool.djlint.css]
indent_size=2

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
    "S",  # bandit
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D107", "D203", "D212", ]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]
"e2e/*" = ["S101"]
# Generated migration files commonly exceed line length on big choice lists.
"**/migrations/*" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# django-ninja uses these as default values in function signatures
extend-immutable-calls = ["ninja.Query", "ninja.File", "ninja.Form", "ninja.Body", "ninja.Path"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder", ]

[tool.uv]
exclude-newer = "P7D"

[tool.uv.exclude-newer-package]
epicenv = "2026-05-23"
